--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Morse Code</string>
+    <string name="default_message">Your decoded morse code message will appear here...</string>
 </resources>
